--- a/public/ranking.html
+++ b/public/ranking.html
@@ -4,6 +4,7 @@
  <meta charset="utf-8">
   <title>Ranking</title>
   <meta name="author" content="Adtile">
+  <meta name="description" content="San Francisco Architects, top architects in san francisco, San Francisco, Architectural designs.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
   
@@ -14,30 +15,147 @@
     
 </head>
 <body>
-	<nav class="l-navigation">
-	  <div class="container">
-	    <div class="pull-left">
-	    	<a href="#"><img src="assets/images/logo.jpg"></a>
-	    </div>
-	    <div class="pull-right">
-	      <ul class="nav-list">
-	        <li><a href="#" class="is-inactive">RANKINGS</a></li>
-	        <li><a href="#" class="is-inactive">NEIGHBORHOOD</a></li>
-	        <li><a href="#" class="is-inactive">CONTACT</a></li>
-	      </ul>
-	    </div>
-	  </div>
+
+	<!-- NAVIGATION -->
+	<nav>
+		<div class="container">
+		    <ul class="main-nav">
+		    	<li>
+		    		<a href="#" class="logo">
+		    			<img src="assets/images/logo.jpg">
+		    		</a>
+		    	</li>
+		        <li class="hidden-sm hidden-xs">
+		        	<a href="#">
+		        		RANKINGS
+		        	</a>
+		        </li>
+		        <li class="hidden-sm hidden-xs">
+		        	<a href="#" >
+		        		NEIGHBORHOOD
+		        	</a>
+		        </li>
+		        <li class="hidden-sm hidden-xs">
+		        	<a href="#">
+		        		CONTACT
+		        	</a>
+		        </li>
+		    </ul>
+		</div>
 	</nav>
 
-	<section class="l-header">
-		<div class="c-header-listings">
-			<div class="container">
-				<h1 class="header-title col-md-8"> RANKINGS </h1>
-				<p class="header-description col-md-8"> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beata. </p>
-			</div>
+	<!-- HEADER -->
+	<header role="banner">
+		<div class="container">
+			<h1 class="header__title col-md-8"> 
+				RANKINGS 
+			</h1>
+			<p class="header__description col-md-8 hidden-xs"> 
+				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beata. 
+			</p>
+		</div>
+	</header>
+
+	<!-- BREAD CRUMBS -->
+	<section class="l-breadcrumbs hidden-sm hidden-xs">
+		<div class="container">
+			<ul class="breadcrumbs-list">
+				<li>
+					<a href="#">
+						Home
+					</a>
+				</li>
+				<li>
+					<i class="fa fa-angle-right" aria-hidden="true"></i>
+				</li>
+				<li>
+					<a href="#">
+						Rankings
+					</a>
+				</li>
+			</ul>
 		</div>
 	</section>
+
+	<!-- WRAPPER -->
+	<main class="container">
+	
+		<!-- OVERVIEW / ABOUT --> 
+
+		<section class="l-overview">
+			<div class="overview__text col-md-6">
+				<p class="section__title">
+					OVERVIEW
+				</p>
+				<p class="section__description">
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium lauda, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasiarchitecto. 
+				</p>
+				
+				<div class="section__statistics">
+					<ul>
+						<li>
+							<h6 class="statistics__title">
+								Stat Title
+							</h6>
+						</li>
+
+						<li>
+							<h2 class="statistics__number">
+								99
+							</h2>
+						</li>
+					</ul>
+
+					<ul>
+						<li>
+							<h6 class="statistics__title">
+								Stat Title
+							</h6>
+						</li>
+
+						<li>
+							<h2 class="statistics__number">
+								99
+							</h2>
+						</li>
+					</ul>
+
+					<ul>
+						<li>
+							<h6 class="statistics__title">
+								Stat Title
+							</h6>
+						</li>
+
+						<li>
+							<h2 class="statistics__number">
+								99
+							</h2>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+
+			<div class="overview__image col-md-6">
+				<img src="assets/images/overview-image.jpg">
+			</div>
+		</section>
+
+		<!-- FEATURED ARCHITECTS --> 
+		<section class="l-featured">
+			<div class="section__title--centered"> 
+				ARCHITECTURAL&nbsp;  DESIGNS 
+			</div>
+		</section>
+
+
+	<!-- WRAPPER END -->
+	</main>
+
 
 
 </body>
 </html>
+
+
