upload complete ranking html file with scss

--- a/public/ranking.html
+++ b/public/ranking.html
@@ -84,23 +84,23 @@
 
 		<section class="l-overview">
 			<div class="overview__text col-md-6">
-				<p class="section__title">
+				<p class="g-section__title">
 					OVERVIEW
 				</p>
-				<p class="section__description">
+				<p class="g-section__description">
 					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium lauda, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasiarchitecto. 
 				</p>
 				
-				<div class="section__statistics">
+				<div class="g-section__statistics">
 					<ul>
 						<li>
-							<h6 class="statistics__title">
+							<h6 class="g-statistics__title">
 								Stat Title
 							</h6>
 						</li>
 
 						<li>
-							<h2 class="statistics__number">
+							<h2 class="g-statistics__number">
 								99
 							</h2>
 						</li>
@@ -108,28 +108,28 @@
 
 					<ul>
 						<li>
-							<h6 class="statistics__title">
+							<h6 class="g-statistics__title">
 								Stat Title
 							</h6>
 						</li>
 
 						<li>
-							<h2 class="statistics__number">
-								99
+							<h2 class="g-statistics__number">
+								121
 							</h2>
 						</li>
 					</ul>
 
 					<ul>
 						<li>
-							<h6 class="statistics__title">
+							<h6 class="g-statistics__title">
 								Stat Title
 							</h6>
 						</li>
 
 						<li>
-							<h2 class="statistics__number">
-								99
+							<h2 class="g-statistics__number">
+								250
 							</h2>
 						</li>
 					</ul>
@@ -144,14 +144,135 @@
 
 		<!-- FEATURED ARCHITECTS --> 
 		<section class="l-featured">
-			<div class="section__title--centered"> 
+			<div class="g-section__title--centered"> 
 				ARCHITECTURAL&nbsp;  DESIGNS 
+			</div>
+			
+			<div class="featured__content">
+				<div class="featured__text">
+					<p class="g-section__title">
+						COMMERCIAL
+					</p>
+					<p class="g-section__description">
+						The San Francisco skyline is changing by the month. The buildings that define the city’s built environment are in flux whether directly or indirectly in relationship to the surrounding structures. We looked into the architects that are responsible for building commercial and large-scale residential projects around the city and ranked them.   
+					</p>
+
+					<p class="g-green-cta">
+						<a href="#">
+							VIEW ARCHITECT
+						</a>
+					</p>
+				</div>
+
+				<div class="featured-gallery">
+					<img src="assets/images/photo-a.jpg" class="featured__pic">
+					<img src="assets/images/photo-b.jpg" class="featured__pic">
+					<img src="assets/images/photo-c.jpg" class="featured__pic">
+					<img src="assets/images/photo-d.jpg" class="featured__pic">
+				</div>
+			</div>
+
+			<div class="featured__content">
+				<div class="featured__text">
+					<p class="g-section__title">
+						RESIDENTIAL
+					</p>
+					<p class="g-section__description">
+						The natural landscape of San Francisco, with its rolling hills and surrounding water, provide a defined and limited canvas for innovative and creative architects. While steep sites offer dramatic views of the city, mountains, and ocean, they also create a test of technical abilities for an architect. <br><br>
+
+						We looked at over 2,000 Architects in San Francisco and picked the 15 best residential architects in San Francisco. 
+					</p>
+
+					<p class="g-green-cta">
+						<a href="#">
+							VIEW ARCHITECT
+						</a>
+					</p>
+				</div>
+
+				<div class="featured-gallery">
+					<img src="assets/images/photo-a.jpg" class="featured__pic">
+					<img src="assets/images/photo-b.jpg" class="featured__pic">
+					<img src="assets/images/photo-c.jpg" class="featured__pic">
+					<img src="assets/images/photo-d.jpg" class="featured__pic">
+				</div>
 			</div>
 		</section>
 
+		<!-- NEIGHBORHOOD CATEGORIES-->
+		<section class="l-categories">
+			<div class="g-section__title--centered"> 
+				ALL&nbsp;  NEIGHBORHOOD
+			</div>
+
+			<div class="categories">
+				<ul class="categories-col">
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+				</ul>
+
+				<ul class="categories-col">
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							Category name
+						</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 
 	<!-- WRAPPER END -->
 	</main>
+
+	<!-- FOOTER-->
+	<footer>
+		<h6>
+			COPYRIGHT 2017. SAN FRANCISCO ARCHITECTS
+		</h6>
+	</footer>
 
 
 
