add ranking individual with overview layout

--- a/public/neighborhood.html
+++ b/public/neighborhood.html
@@ -90,7 +90,7 @@
 					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium lauda, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasiarchitecto. 
 				</p>
 				
-				<div class="g-section__statistics">
+				<div class="g-statistics--horizontal">
 					<ul>
 						<li>
 							<h6 class="g-statistics__title">
