--- a/public/ranking-individual.html
+++ b/public/ranking-individual.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <meta charset="utf-8">
-  <title>Ranking</title>
+  <title>Ranking Individual</title>
   <meta name="author" content="Adtile">
   <meta name="description" content="San Francisco Architects, top architects in san francisco, San Francisco, Architectural designs.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -45,14 +45,11 @@
 	</nav>
 
 	<!-- HEADER -->
-	<header role="banner">
+	<header role="banner" class="header--individual">
 		<div class="container">
-			<h1 class="header__title col-md-8"> 
-				RANKINGS 
+			<h1 class="header__title--individual col-md-8"> 
+				FOUGERON <br> ARCHITECTURE
 			</h1>
-			<p class="header__description col-md-8 hidden-xs"> 
-				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beata. 
-			</p>
 		</div>
 	</header>
 
@@ -73,13 +70,106 @@
 						Rankings
 					</a>
 				</li>
+				<li>
+					<i class="fa fa-angle-right" aria-hidden="true"></i>
+				</li>
+				<li>
+					<a href="#">
+						Fougeron
+					</a>
+				</li>
 			</ul>
 		</div>
 	</section>
 
 	<!-- WRAPPER -->
 	<main class="container">
-	
+		<!-- OVERVIEW / ABOUT --> 
+
+		<section class="l-overview">
+			<div class="overview__text">
+				<p class="g-section__title">
+					BACKGROUND
+				</p>
+				<p class="g-section__description">
+					French-American architect Anne Fougeron is a nationally recognized architect whose work is on display throughout the Bay Area. With over 30 years of experience, she has been trusted to redesign or update many of San Francisco’s historic and culturally significant buildings, including Brava Theater, a 1918 Carnegie library.
+				</p>
+
+				<ul class="overview__contact">
+					<li class="overview__contact--icon">
+						<img src="assets/images/icon-edit.svg">
+					</li>
+					<li class="overview__contact--text">
+						<h5>
+							Anne Fougeron
+						</h5>
+					</li>
+
+					<li class="overview__contact--icon">
+						<img src="assets/images/icon-phone.svg">
+					</li>
+					<li class="overview__contact--text">
+						<h5>
+							(410) 522 1234
+						</h5>
+					</li>
+
+					<li class="overview__contact--icon">
+						<img src="assets/images/icon-link.svg">
+					</li>
+					<li class="overview__contact--text">
+						<h5>
+							www.website.com
+						</h5>
+					</li>
+				</ul>
+			</div>
+
+			<div class="g-statistics--vertical">
+
+				<ul>
+					<li>
+						<h6 class="g-statistics__title">
+							Stat Title
+						</h6>
+					</li>
+
+					<li>
+						<h2 class="g-statistics__number">
+							99
+						</h2>
+					</li>
+				</ul>
+
+				<ul>
+					<li>
+						<h6 class="g-statistics__title">
+							Stat Title
+						</h6>
+					</li>
+
+					<li>
+						<h2 class="g-statistics__number">
+							121
+						</h2>
+					</li>
+				</ul>
+
+				<ul>
+					<li>
+						<h6 class="g-statistics__title">
+							Stat Title
+						</h6>
+					</li>
+
+					<li>
+						<h2 class="g-statistics__number">
+							250
+						</h2>
+					</li>
+				</ul>
+			</div>
+		</section>
 
 
 	<!-- WRAPPER END -->
