--- a/public/ranking.html
+++ b/public/ranking.html
@@ -83,7 +83,7 @@
 		<!-- OVERVIEW / ABOUT --> 
 
 		<section class="l-overview">
-			<div class="overview__text col-md-6">
+			<div class="overview__text">
 				<p class="g-section__title">
 					OVERVIEW
 				</p>
@@ -91,7 +91,7 @@
 					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium lauda, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasiarchitecto. 
 				</p>
 				
-				<div class="g-section__statistics">
+				<div class="g-statistics--horizontal">
 					<ul>
 						<li>
 							<h6 class="g-statistics__title">
@@ -137,7 +137,7 @@
 				</div>
 			</div>
 
-			<div class="overview__image col-md-6">
+			<div class="overview__image">
 				<img src="assets/images/overview-image.jpg">
 			</div>
 		</section>
