add complete ranking individual page

--- a/public/ranking-individual.html
+++ b/public/ranking-individual.html
@@ -171,6 +171,84 @@
 			</div>
 		</section>
 
+		<!-- IMAGES DIVIDER -->
+		<section>
+			<div class="overview__image--indiv">
+				<img src="assets/images/indiv-a.jpg">
+				<img src="assets/images/indiv-b.jpg">
+			</div>
+		</section>
+
+
+		<!-- ARCHITECT PROFILE-->
+		<section class="l-architect">
+			<p class="g-section__title">
+				ARCHITECT
+			</p>
+
+			<div class="architect__profile">
+				<img src="assets/images/architect-photo.jpg">
+				<div class="architect__profile--text">
+					<h3 class="architect__name">
+						Anne Fougeron
+					</h3>
+					<p class="g-section__description">
+						founded Fougeron Architecture in 1985. Her firm was acknowledged as one of the 50 best architectural firms in the United States by Residential Architect Magazine in 2010. Fougeron’s innovative work is defined by its use of natural light and the ability to use design elements to influence how people interact with the built form. 
+					</p> 
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+					<i class="fa fa-twitter" aria-hidden="true"></i>
+				</div>
+			</div>
+
+			<div class="architect__quote">
+				<h3> 
+					We're born alone, we live alone, we die alone. Only through our love and friendship can we create the illusion for the moment that we're not alone.
+				</h3>
+			</div>
+		</section>
+
+		<!-- PORTFOLIO -->
+		<section class="l-portfolio">
+			<p class="g-section__title">
+				PORTFOLIO
+			</p>
+
+			<div class="portfolio">
+				<div class="portfolio__text">
+					<div class="portfolio__nav">
+						<span> 
+							1/10 
+						</span>
+						<span> 
+							<a href="#">
+								<i class="fa fa-angle-left" aria-hidden="true"></i> 
+							</a>
+							<a href="#">
+								<i class="fa fa-angle-right" aria-hidden="true"></i>
+							</a>
+						 </span>
+					</div>
+
+					<p class="portfolio__description">
+						In the summer of 2016, 2370 Washington Street underwent a full interior remodel of the garage, 1st, 2nd, and 3rd levels. While the exterior remains mostly the same we love the new entry. 
+					</p>
+				</div>
+
+				<div class="portfolio__carousel">
+					<img src="assets/images/overview-image.jpg">
+				</div>
+			</div>
+		</section>
+
+		<!-- PROJECT MAPS -->
+		<section class="l-project-maps">
+			<p class="g-section__title">
+				PROJECT MAPS
+			</p>
+			<div class="map">
+				<img src="assets/images/map.jpg">
+			</div>	
+		</section>
 
 	<!-- WRAPPER END -->
 	</main>
