--- a/public/ranking-individual.html
+++ b/public/ranking-individual.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Adtile">
   <meta name="description" content="San Francisco Architects, top architects in san francisco, San Francisco, Architectural designs.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/minify/style.css">
   
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
